--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "core-js": "^3.8.0",
     "cross-env": "^7.0.2",
     "fast-async": "^6.3.8",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
+    "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0"
@@ -39,12 +41,24 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.5.0",
+    "axios": "^0.21.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.15.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-jsdoc": "^30.7.8",
+    "eslint-plugin-react": "^7.21.5",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
+    "material-ui": "^0.20.2",
+    "react-bootstrap": "^1.4.0",
+    "react-native": "^0.63.4",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^2.0.0",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
