--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "react-native": "^0.63.4",
+    "react-router-dom": "^5.2.0",
     "redux-thunk": "^2.3.0",
     "style-loader": "^2.0.0",
     "webpack": "^4.26.0",
