--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/lutanya/task2webpack#readme",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "classnames": "^2.2.6",
     "compression-webpack-plugin": "^6.1.1",
     "core-js": "^3.8.0",
     "cross-env": "^7.0.2",
