--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cross-env": "^7.0.2",
     "fast-async": "^6.3.8",
     "file-loader": "^6.2.0",
+    "formik": "^2.2.6",
     "mini-css-extract-plugin": "^1.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -35,7 +36,8 @@
     "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
