--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "version": "1.0.0",
   "description": "Webpack learning task",
   "main": "index.js",
+  "jest": {
+    "moduleNameMapper": {
+      ".+\\.(css|scss|png|jpg|ttf|woff|woff2)$": "jest-transform-stub"
+    },
+    "globals": {
+      "expect": true
+    }
+  },
   "scripts": {
     "start": "webpack-dev-server --env development",
     "build": "webpack --env production",
-    "test": "jest __tests__ --watch"
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
+    "test:coverage": "npm test -- --coverage"
   },
   "repository": {
     "type": "git",
@@ -47,18 +57,27 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.0",
+    "@testing-library/react": "^11.2.3",
     "axios": "^0.21.0",
+    "axios-mock-adapter": "^1.19.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.15.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.21.5",
+    "fetch-mock": "^9.11.0",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
+    "jest-transform-stub": "^2.0.0",
     "react-native": "^0.63.4",
     "react-router-dom": "^5.2.0",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "style-loader": "^2.0.0",
     "webpack": "^4.26.0",
